--- a/public/lang/br.json
+++ b/public/lang/br.json
@@ -2374,13 +2374,13 @@
     "string": "Topic"
   },
   "contact_footer": {
-    "string": "Contact"
+    "string": "Contato"
   },
   "discoverCollections_egwAudiobooksHeading": {
     "string": "Discover Ellen White"
   },
   "discoverCollections_storySeasonsHeading": {
-    "string": "Stories"
+    "string": "Histórias"
   },
   "discover__conferencesNext": {
     "string": "Next recent conferences"
@@ -2474,7 +2474,7 @@
     "string": "People having a discussion in a meeting"
   },
   "legal_footer": {
-    "string": "Legal"
+    "string": "Jurídico"
   },
   "loginLanding__title": {
     "string": "Login Landing"
@@ -2486,7 +2486,7 @@
     "string": "Create a free account or login to access the Library features, like saving, viewing your downloads & history, and syncing across devices."
   },
   "molecule-buttonGuestDownload__modalTitle": {
-    "string": "Create a Free Account"
+    "string": "Criar uma conta gratuita"
   },
   "molecule-buttonGuest__Download": {
     "string": "Download content for offline access"
@@ -2507,7 +2507,7 @@
     "string": "With a free account,you can"
   },
   "molecule-buttonGuest__modalTitle2": {
-    "string": "Are you sure?"
+    "string": "Tem certeza?"
   },
   "molecule-buttonGuest__requests": {
     "string": "Avoid annoying login requests"
@@ -2526,7 +2526,7 @@
     "string": "Cancel"
   },
   "molecules-pagination__nextLabelMobile": {
-    "string": "Next"
+    "string": "Próximo"
   },
   "organism-mobileHeader__more": {
     "comment": "more button label",
@@ -2537,7 +2537,7 @@
     "string": "Exit"
   },
   "organismSection__audiobooksHeading": {
-    "string": "Books"
+    "string": "Todos Audiolivros"
   },
   "organismSection__audiobooksNext": {
     "string": "Next audiobooks"
@@ -2564,7 +2564,7 @@
     "string": "Previous EGW audiobooks"
   },
   "organismSection_presentersHeading": {
-    "string": "Presenters"
+    "string": "Oradores"
   },
   "organismSection_presentersNext": {
     "string": "Next presenters"
@@ -2573,7 +2573,7 @@
     "string": "Previous presenters"
   },
   "organismSection_scriptureSongsHeading": {
-    "string": "Scripture Songs"
+    "string": "Canções das Escrituras"
   },
   "organismSection_scriptureSongsNext": {
     "string": "Next scripture songs"
@@ -2582,7 +2582,7 @@
     "string": "Previous scripture songs"
   },
   "organismSection_seriesHeading": {
-    "string": "Series"
+    "string": "Séries"
   },
   "organismSection_seriesNext": {
     "string": "Next series"
@@ -2591,7 +2591,7 @@
     "string": "Previous series"
   },
   "organismSection_sponsorsHeading": {
-    "string": "Sponsors"
+    "string": "Patrocinadores"
   },
   "organismSection_sponsorsNext": {
     "string": "Next sponsors"
@@ -2600,25 +2600,25 @@
     "string": "Previous sponsors"
   },
   "presentersListAll__all": {
-    "string": "All"
+    "string": "Todos"
   },
   "presentersList__all": {
-    "string": "All"
+    "string": "Todos"
   },
   "privacy_footer": {
     "string": "Privacy Policy"
   },
   "regularLogin__login": {
-    "string": "Already have an account?"
+    "string": "Já tem uma conta?"
   },
   "regularLogin__loginTxt": {
     "string": "Log In"
   },
   "search__allHeading": {
-    "string": "All"
+    "string": "Todos"
   },
   "search__bibleBooksHeading": {
-    "string": "Bible"
+    "string": "Bíblia"
   },
   "search__bileBooksSeeAll": {
     "string": "See All Matching Bible books"
@@ -2648,7 +2648,7 @@
     "string": "See All Matching Presenters"
   },
   "search__seriesHeading": {
-    "string": "Series"
+    "string": "Séries"
   },
   "search__seriesSeeAll": {
     "string": "See All Matching Series"
@@ -2666,10 +2666,10 @@
     "string": "Or"
   },
   "sponsorsListAll__all": {
-    "string": "All"
+    "string": "Todos"
   },
   "sponsorsList__all": {
-    "string": "All"
+    "string": "Todos"
   },
   "storyAlbumList__emptyStateMessage": {
     "string": "There are no story albums to show."
@@ -2678,10 +2678,10 @@
     "string": "Nothing here!"
   },
   "terms_footer": {
-    "string": "Terms of Use"
+    "string": "Termos de uso"
   },
   "topicDetail__description": {
-    "string": "Description"
+    "string": "Descrição"
   },
   "topicDetail__label": {
     "string": "Topic"
@@ -2690,10 +2690,10 @@
     "string": "Parent Topic"
   },
   "topicDetail__series": {
-    "string": "Series"
+    "string": "Séries"
   },
   "topicDetail__teachings": {
-    "string": "Teachings"
+    "string": "Ensinamentos"
   },
   "topicItemCount__items": {
     "string": "{count, plural, one {# item} other {# items}}"
@@ -2723,7 +2723,7 @@
     "string": "Sign up for our Emails"
   },
   "newsLetterForm__newsletterName": {
-    "string": "Name"
+    "string": "Nome"
   },
   "newsLetterForm__newsletterNamePlaceholder": {
     "string": "Joseph Bates"
