--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -118,7 +118,7 @@
     "string": "Historias"
   },
   "cardSermon_sequenceLabel": {
-    "string": "Series"
+    "string": "Serie"
   },
   "cardSlider__nextPageLabel": {
     "comment": "etiqueta de la página siguiente",
@@ -172,7 +172,7 @@
   },
   "collectionDetail__seriesLabel": {
     "comment": "Detalle de la colección etiqueta de la serie",
-    "string": "Series"
+    "string": "Serie"
   },
   "collectionDetail__sponsorLabel": {
     "string": "Patrocinador"
@@ -796,7 +796,7 @@
   },
   "presenterDetail__seriesLabel": {
     "comment": "Detalle de la colección etiqueta de la serie",
-    "string": "Series"
+    "string": "Serie"
   },
   "presenterDetail__speakersAllLabel": {
     "string": "Ver “También aparece en”"
@@ -981,7 +981,7 @@
     "string": "Canciones basadas en las Escrituras"
   },
   "sequenceType__seriesTitle": {
-    "string": "Series"
+    "string": "Serie"
   },
   "sequenceType__storyTitle": {
     "string": "Historias"
@@ -1087,7 +1087,7 @@
   },
   "sponsorDetail__seriesLabel": {
     "comment": "Detalle de la colección etiqueta de la serie",
-    "string": "Series"
+    "string": "Serie"
   },
   "sponsorDetail__websiteLabel": {
     "string": "Sitio web"
@@ -1377,7 +1377,7 @@
     "string": "Gente"
   },
   "libraryNav__contentType-series": {
-    "string": "Series"
+    "string": "Serie"
   },
   "libraryNav__contentType-sponsors": {
     "string": "Patrocinador"
@@ -1732,13 +1732,13 @@
     "string": "Website"
   },
   "bible__title": {
-    "string": "Bible"
+    "string": "Biblia"
   },
   "blog__title": {
     "string": "All Blog Posts"
   },
   "books__title": {
-    "string": "Books"
+    "string": "Todos los audiolibros"
   },
   "browse__topicsNext": {
     "string": "Next topics"
@@ -1771,10 +1771,10 @@
     "string": "Remove Sponsor"
   },
   "cardHatSponsor__sponsorLabel": {
-    "string": "Sponsor"
+    "string": "Patrocinador"
   },
   "cardSequence_chaptersLabel": {
-    "string": "{count} chapters"
+    "string": "{count} capítulos"
   },
   "cardSequence_egwAudiobookType": {
     "string": "ELLEN WHITE"
@@ -1786,7 +1786,7 @@
     "string": "Topic"
   },
   "collectionType__bibleVersion": {
-    "string": "Bible Version"
+    "string": "Versión bíblica"
   },
   "conferencesPresenters__title": {
     "string": "Presenters from {conferenceName}"
@@ -1798,7 +1798,7 @@
     "string": "Teachings from {conferenceName}"
   },
   "conferences__title": {
-    "string": "All Conferences"
+    "string": "Conferencias"
   },
   "contact__help": {
     "string": "View help articles"
@@ -1816,7 +1816,7 @@
     "string": "Thank you!"
   },
   "contact_footer": {
-    "string": "Contact"
+    "string": "Contacto"
   },
   "discoverCollections__title": {
     "string": "Discover Collections"
@@ -1825,7 +1825,7 @@
     "string": "Discover Ellen White"
   },
   "discoverCollections_storySeasonsHeading": {
-    "string": "Stories"
+    "string": "Historias"
   },
   "discover__conferencesNext": {
     "string": "Next recent conferences"
@@ -1910,7 +1910,7 @@
     "string": "Donation form"
   },
   "give__title": {
-    "string": "Donate"
+    "string": "Donar"
   },
   "header__navItemBrowse": {
     "comment": "Header nav link name: Browse",
@@ -2070,7 +2070,7 @@
     "string": "joined the chat"
   },
   "helpScout.emailLabel": {
-    "string": "Email address"
+    "string": "Dirección de correo electrónico"
   },
   "helpScout.emailValidationLabel": {
     "string": "Please use a valid email address"
@@ -2115,7 +2115,7 @@
     "string": "Get in touch"
   },
   "helpScout.history": {
-    "string": "History"
+    "string": "Historial"
   },
   "helpScout.howCanWeHelp": {
     "string": "How can we help?"
@@ -2217,7 +2217,7 @@
     "string": "Create an Account"
   },
   "homePage__DiscoverAudioButtonLabel": {
-    "string": "Discover Audio"
+    "string": "Encontrar audio"
   },
   "homePage__bannerImageAlt": {
     "comment": "home page banner image alt",
@@ -2246,7 +2246,7 @@
     "string": "See what some of our listeners have shared about using AudioVerse. <a>Visit the Testimonials page</a> to see even more."
   },
   "legal_footer": {
-    "string": "Legal"
+    "string": "Legales"
   },
   "library__createAccountHeading": {
     "string": "Create a free account"
@@ -2282,7 +2282,7 @@
     "string": "Reduce volume"
   },
   "miniplayer__series": {
-    "string": "Series"
+    "string": "Serie"
   },
   "miniplayer__volume": {
     "string": "Volume"
@@ -2324,7 +2324,7 @@
     "string": "With a free account,you can"
   },
   "molecule-buttonGuest__modalTitle2": {
-    "string": "Are you sure?"
+    "string": "¿Está seguro?"
   },
   "molecule-buttonGuest__requests": {
     "string": "Avoid annoying login requests"
@@ -2384,7 +2384,7 @@
     "string": "Read Along"
   },
   "organismSection__audiobooksHeading": {
-    "string": "Books"
+    "string": "Todos los audiolibros"
   },
   "organismSection__audiobooksNext": {
     "string": "Next audiobooks"
@@ -2411,7 +2411,7 @@
     "string": "Previous EGW audiobooks"
   },
   "organismSection_presentersHeading": {
-    "string": "Presenters"
+    "string": "Presentadores"
   },
   "organismSection_presentersNext": {
     "string": "Next presenters"
@@ -2420,7 +2420,7 @@
     "string": "Previous presenters"
   },
   "organismSection_scriptureSongsHeading": {
-    "string": "Scripture Songs"
+    "string": "Canciones basadas en las Escrituras"
   },
   "organismSection_scriptureSongsNext": {
     "string": "Next scripture songs"
@@ -2429,7 +2429,7 @@
     "string": "Previous scripture songs"
   },
   "organismSection_seriesHeading": {
-    "string": "Series"
+    "string": "Serie"
   },
   "organismSection_seriesNext": {
     "string": "Next series"
@@ -2438,7 +2438,7 @@
     "string": "Previous series"
   },
   "organismSection_sponsorsHeading": {
-    "string": "Sponsors"
+    "string": "Patrocinador"
   },
   "organismSection_sponsorsNext": {
     "string": "Next sponsors"
@@ -2456,10 +2456,10 @@
     "string": "{personName} Also Appears In"
   },
   "presentersListAll__all": {
-    "string": "All"
+    "string": "Todo"
   },
   "presentersList__all": {
-    "string": "All"
+    "string": "Todo"
   },
   "presentersSequences__title": {
     "string": "Series by {personName}"
@@ -2471,7 +2471,7 @@
     "string": "Most Listened by {personName}"
   },
   "presenters__title": {
-    "string": "All Presenters"
+    "string": "Todos los presentadores"
   },
   "privacy_footer": {
     "string": "Privacy Policy"
@@ -2498,13 +2498,13 @@
     "string": "I understand that I will no longer be able to log in unless I create a new account."
   },
   "profile__deleteConfirmTitle": {
-    "string": "Are you sure?"
+    "string": "¿Está seguro?"
   },
   "register__title": {
     "string": "Register"
   },
   "regularLogin__login": {
-    "string": "Already have an account?"
+    "string": "¿Ya tiene una cuenta?"
   },
   "regularLogin__loginTxt": {
     "string": "Log In"
@@ -2552,16 +2552,16 @@
     "string": "Postal Code"
   },
   "search__allHeading": {
-    "string": "All"
+    "string": "Todo"
   },
   "search__bibleBooksHeading": {
-    "string": "Bible"
+    "string": "Biblia"
   },
   "search__bileBooksSeeAll": {
     "string": "See All Matching Bible books"
   },
   "search__booksHeading": {
-    "string": "Audiobooks"
+    "string": "Audiolibros"
   },
   "search__booksSeeAll": {
     "string": "See All Matching Audiobooks"
@@ -2579,31 +2579,31 @@
     "string": "No results found"
   },
   "search__musicHeading": {
-    "string": "Music"
+    "string": "Música"
   },
   "search__musicSeeAll": {
     "string": "See All Matching Music"
   },
   "search__presentersHeading": {
-    "string": "Presenters"
+    "string": "Presentadores"
   },
   "search__presentersSeeAll": {
     "string": "See All Matching Presenters"
   },
   "search__seriesHeading": {
-    "string": "Series"
+    "string": "Serie"
   },
   "search__seriesSeeAll": {
     "string": "See All Matching Series"
   },
   "search__storiesHeading": {
-    "string": "Stories"
+    "string": "Historias"
   },
   "search__storiesSeeAll": {
     "string": "See All Matching Stories"
   },
   "search__title": {
-    "string": "Search"
+    "string": "Buscar"
   },
   "search__titleDynamic": {
     "string": "Search | \"{term}\" | AudioVerse"
@@ -2612,7 +2612,7 @@
     "string": "Bible Book"
   },
   "seriesList__title": {
-    "string": "All Series"
+    "string": "Todas las series"
   },
   "sermonDetailPage__openGraphDescription_audiobook": {
     "string": "Audiobook provided by {sponsorName}"
@@ -2642,10 +2642,10 @@
     "string": "Conferences by {sponsorName}"
   },
   "sponsorsListAll__all": {
-    "string": "All"
+    "string": "Todo"
   },
   "sponsorsList__all": {
-    "string": "All"
+    "string": "Todo"
   },
   "sponsorsSequences__title": {
     "string": "Series by {sponsorName}"
@@ -2654,7 +2654,7 @@
     "string": "Teachings by {sponsorName}"
   },
   "sponsors__title": {
-    "string": "All Sponsors"
+    "string": "Todos los patrocinadores"
   },
   "storyAlbumList__emptyStateMessage": {
     "string": "There are no story albums to show."
@@ -2663,22 +2663,22 @@
     "string": "Nothing here!"
   },
   "storyAlbums__title": {
-    "string": "Scripture Songs"
+    "string": "Canciones basadas en las Escrituras"
   },
   "teachings__title": {
-    "string": "All Teachings"
+    "string": "Todas las lecciones"
   },
   "team__title": {
     "string": "Our Team"
   },
   "terms_footer": {
-    "string": "Terms of Use"
+    "string": "Condiciones de uso"
   },
   "testimonies__title": {
     "string": "Testimonials"
   },
   "topicDetail__description": {
-    "string": "Description"
+    "string": "Descripción"
   },
   "topicDetail__label": {
     "string": "Topic"
@@ -2687,10 +2687,10 @@
     "string": "Parent Topic"
   },
   "topicDetail__series": {
-    "string": "Series"
+    "string": "Serie"
   },
   "topicDetail__teachings": {
-    "string": "Teachings"
+    "string": "Lecciones"
   },
   "topicItemCount__items": {
     "string": "{count, plural, one {# item} other {# items}}"
@@ -2705,7 +2705,7 @@
     "string": "All Topics"
   },
   "trending__title": {
-    "string": "Trending Teachings"
+    "string": "Lecciones que son tendencia"
   },
   "newsLetterForm__checkboxNewsletter": {
     "string": "Newsletter (typically about once a month)"
