--- a/public/lang/ru.json
+++ b/public/lang/ru.json
@@ -1729,13 +1729,13 @@
     "string": "Website"
   },
   "bible__title": {
-    "string": "Bible"
+    "string": "Библия"
   },
   "blog__title": {
     "string": "All Blog Posts"
   },
   "books__title": {
-    "string": "Books"
+    "string": "Все аудиокниги"
   },
   "browse__topicsNext": {
     "string": "Next topics"
@@ -1768,10 +1768,10 @@
     "string": "Remove Sponsor"
   },
   "cardHatSponsor__sponsorLabel": {
-    "string": "Sponsor"
+    "string": "Организатор"
   },
   "cardSequence_chaptersLabel": {
-    "string": "{count} chapters"
+    "string": "{count} главы"
   },
   "cardSequence_egwAudiobookType": {
     "string": "ELLEN WHITE"
@@ -1783,7 +1783,7 @@
     "string": "Topic"
   },
   "collectionType__bibleVersion": {
-    "string": "Bible Version"
+    "string": "Версия Библии"
   },
   "conferencesPresenters__title": {
     "string": "Presenters from {conferenceName}"
@@ -1795,7 +1795,7 @@
     "string": "Teachings from {conferenceName}"
   },
   "conferences__title": {
-    "string": "All Conferences"
+    "string": "Конференции"
   },
   "contact__help": {
     "string": "View help articles"
@@ -1813,7 +1813,7 @@
     "string": "Thank you!"
   },
   "contact_footer": {
-    "string": "Contact"
+    "string": "Контакт"
   },
   "discoverCollections__title": {
     "string": "Discover Collections"
@@ -1822,7 +1822,7 @@
     "string": "Discover Ellen White"
   },
   "discoverCollections_storySeasonsHeading": {
-    "string": "Stories"
+    "string": "Истории"
   },
   "discover__conferencesNext": {
     "string": "Next recent conferences"
@@ -1907,7 +1907,7 @@
     "string": "Donation form"
   },
   "give__title": {
-    "string": "Donate"
+    "string": "Пожертвовать"
   },
   "header__navItemBrowse": {
     "comment": "Header nav link name: Browse",
@@ -2067,7 +2067,7 @@
     "string": "joined the chat"
   },
   "helpScout.emailLabel": {
-    "string": "Email address"
+    "string": "Адрес электронной почты"
   },
   "helpScout.emailValidationLabel": {
     "string": "Please use a valid email address"
@@ -2112,7 +2112,7 @@
     "string": "Get in touch"
   },
   "helpScout.history": {
-    "string": "History"
+    "string": "История"
   },
   "helpScout.howCanWeHelp": {
     "string": "How can we help?"
@@ -2214,7 +2214,7 @@
     "string": "Create an Account"
   },
   "homePage__DiscoverAudioButtonLabel": {
-    "string": "Discover Audio"
+    "string": "Открыть аудио"
   },
   "homePage__bannerImageAlt": {
     "comment": "home page banner image alt",
@@ -2243,7 +2243,7 @@
     "string": "See what some of our listeners have shared about using AudioVerse. <a>Visit the Testimonials page</a> to see even more."
   },
   "legal_footer": {
-    "string": "Legal"
+    "string": "Юр. вопросы"
   },
   "library__createAccountHeading": {
     "string": "Create a free account"
@@ -2264,10 +2264,10 @@
     "string": "Login"
   },
   "mediaFormatSwitcher__audio": {
-    "string": "Audio"
+    "string": "Аудио"
   },
   "mediaFormatSwitcher__video": {
-    "string": "Video"
+    "string": "Видео"
   },
   "miniplayer__increaseVolume": {
     "string": "Increase volume"
@@ -2279,7 +2279,7 @@
     "string": "Reduce volume"
   },
   "miniplayer__series": {
-    "string": "Series"
+    "string": "Семинары"
   },
   "miniplayer__volume": {
     "string": "Volume"
@@ -2321,7 +2321,7 @@
     "string": "With a free account,you can"
   },
   "molecule-buttonGuest__modalTitle2": {
-    "string": "Are you sure?"
+    "string": "Вы уверены?"
   },
   "molecule-buttonGuest__requests": {
     "string": "Avoid annoying login requests"
@@ -2381,7 +2381,7 @@
     "string": "Read Along"
   },
   "organismSection__audiobooksHeading": {
-    "string": "Books"
+    "string": "Все аудиокниги"
   },
   "organismSection__audiobooksNext": {
     "string": "Next audiobooks"
@@ -2408,7 +2408,7 @@
     "string": "Previous EGW audiobooks"
   },
   "organismSection_presentersHeading": {
-    "string": "Presenters"
+    "string": "Проповедники"
   },
   "organismSection_presentersNext": {
     "string": "Next presenters"
@@ -2417,7 +2417,7 @@
     "string": "Previous presenters"
   },
   "organismSection_scriptureSongsHeading": {
-    "string": "Scripture Songs"
+    "string": "Песни на библейские тексты"
   },
   "organismSection_scriptureSongsNext": {
     "string": "Next scripture songs"
@@ -2426,7 +2426,7 @@
     "string": "Previous scripture songs"
   },
   "organismSection_seriesHeading": {
-    "string": "Series"
+    "string": "Семинары"
   },
   "organismSection_seriesNext": {
     "string": "Next series"
@@ -2435,7 +2435,7 @@
     "string": "Previous series"
   },
   "organismSection_sponsorsHeading": {
-    "string": "Sponsors"
+    "string": "Организаторы"
   },
   "organismSection_sponsorsNext": {
     "string": "Next sponsors"
@@ -2453,10 +2453,10 @@
     "string": "{personName} Also Appears In"
   },
   "presentersListAll__all": {
-    "string": "All"
+    "string": "Все"
   },
   "presentersList__all": {
-    "string": "All"
+    "string": "Все"
   },
   "presentersSequences__title": {
     "string": "Series by {personName}"
@@ -2468,7 +2468,7 @@
     "string": "Most Listened by {personName}"
   },
   "presenters__title": {
-    "string": "All Presenters"
+    "string": "Все проповедники"
   },
   "privacy_footer": {
     "string": "Privacy Policy"
@@ -2495,13 +2495,13 @@
     "string": "I understand that I will no longer be able to log in unless I create a new account."
   },
   "profile__deleteConfirmTitle": {
-    "string": "Are you sure?"
+    "string": "Вы уверены?"
   },
   "register__title": {
     "string": "Register"
   },
   "regularLogin__login": {
-    "string": "Already have an account?"
+    "string": "У Вас уже есть учетная запись?"
   },
   "regularLogin__loginTxt": {
     "string": "Log In"
@@ -2549,16 +2549,16 @@
     "string": "Postal Code"
   },
   "search__allHeading": {
-    "string": "All"
+    "string": "Все"
   },
   "search__bibleBooksHeading": {
-    "string": "Bible"
+    "string": "Библия"
   },
   "search__bileBooksSeeAll": {
     "string": "See All Matching Bible books"
   },
   "search__booksHeading": {
-    "string": "Audiobooks"
+    "string": "Аудиокниги"
   },
   "search__booksSeeAll": {
     "string": "See All Matching Audiobooks"
@@ -2576,31 +2576,31 @@
     "string": "No results found"
   },
   "search__musicHeading": {
-    "string": "Music"
+    "string": "Музыка"
   },
   "search__musicSeeAll": {
     "string": "See All Matching Music"
   },
   "search__presentersHeading": {
-    "string": "Presenters"
+    "string": "Проповедники"
   },
   "search__presentersSeeAll": {
     "string": "See All Matching Presenters"
   },
   "search__seriesHeading": {
-    "string": "Series"
+    "string": "Семинары"
   },
   "search__seriesSeeAll": {
     "string": "See All Matching Series"
   },
   "search__storiesHeading": {
-    "string": "Stories"
+    "string": "Истории"
   },
   "search__storiesSeeAll": {
     "string": "See All Matching Stories"
   },
   "search__title": {
-    "string": "Search"
+    "string": "Поиск"
   },
   "search__titleDynamic": {
     "string": "Search | \"{term}\" | AudioVerse"
@@ -2609,7 +2609,7 @@
     "string": "Bible Book"
   },
   "seriesList__title": {
-    "string": "All Series"
+    "string": "Все семинары"
   },
   "sermonDetailPage__openGraphDescription_audiobook": {
     "string": "Audiobook provided by {sponsorName}"
@@ -2636,16 +2636,16 @@
     "string": "Spirit Of AudioVerse"
   },
   "sponsorSeriesDetail__heading": {
-    "string": "All Series"
+    "string": "Все семинары"
   },
   "sponsorsConferences__title": {
     "string": "Conferences by {sponsorName}"
   },
   "sponsorsListAll__all": {
-    "string": "All"
+    "string": "Все"
   },
   "sponsorsList__all": {
-    "string": "All"
+    "string": "Все"
   },
   "sponsorsSequences__title": {
     "string": "Series by {sponsorName}"
@@ -2654,7 +2654,7 @@
     "string": "Teachings by {sponsorName}"
   },
   "sponsors__title": {
-    "string": "All Sponsors"
+    "string": "Все организаторы"
   },
   "storyAlbumList__emptyStateMessage": {
     "string": "There are no story albums to show."
@@ -2663,22 +2663,22 @@
     "string": "Nothing here!"
   },
   "storyAlbums__title": {
-    "string": "Scripture Songs"
+    "string": "Песни на библейские тексты"
   },
   "teachings__title": {
-    "string": "All Teachings"
+    "string": "Все темы"
   },
   "team__title": {
     "string": "Our Team"
   },
   "terms_footer": {
-    "string": "Terms of Use"
+    "string": "Условия использования"
   },
   "testimonies__title": {
     "string": "Testimonials"
   },
   "topicDetail__description": {
-    "string": "Description"
+    "string": "Описание"
   },
   "topicDetail__label": {
     "string": "Topic"
@@ -2687,10 +2687,10 @@
     "string": "Parent Topic"
   },
   "topicDetail__series": {
-    "string": "Series"
+    "string": "Семинары"
   },
   "topicDetail__teachings": {
-    "string": "Teachings"
+    "string": "Проповеди"
   },
   "topicItemCount__items": {
     "string": "{count, plural, one {# item} other {# items}}"
@@ -2705,7 +2705,7 @@
     "string": "All Topics"
   },
   "trending__title": {
-    "string": "Trending Teachings"
+    "string": "Популяные проповеди"
   },
   "newsLetterForm__checkboxNewsletter": {
     "string": "Newsletter (typically about once a month)"
