--- a/public/lang/br.json
+++ b/public/lang/br.json
@@ -2796,5 +2796,11 @@
   },
   "onlyYou": {
     "string": "Only you can view"
+  },
+  "create": {
+    "string": "Create"
+  },
+  "done": {
+    "string": "Concluído"
   }
 }
