--- a/public/lang/ru.json
+++ b/public/lang/ru.json
@@ -2796,5 +2796,11 @@
   },
   "onlyYou": {
     "string": "Только вы можете просматривать"
+  },
+  "create": {
+    "string": "Create"
+  },
+  "done": {
+    "string": "Выполнено"
   }
 }
