--- a/public/lang/es.json
+++ b/public/lang/es.json
@@ -2796,5 +2796,11 @@
   },
   "onlyYou": {
     "string": "Sólo tú puedes ver"
+  },
+  "create": {
+    "string": "Create"
+  },
+  "done": {
+    "string": "Terminado"
   }
 }
