--- a/public/lang/ja.json
+++ b/public/lang/ja.json
@@ -2796,5 +2796,11 @@
   },
   "onlyYou": {
     "string": "あなただけが閲覧できます"
+  },
+  "create": {
+    "string": "Create"
+  },
+  "done": {
+    "string": "終了"
   }
 }
