--- a/public/lang/de.json
+++ b/public/lang/de.json
@@ -2780,7 +2780,7 @@
     "string": "Neue Playlist"
   },
   "not_shareable": {
-    "string": "This Playlist is Private."
+    "string": "Diese Playlist ist privat."
   },
   "not_shareable_title": {
     "string": "Privat"
@@ -2798,7 +2798,7 @@
     "string": "Nur Sie können es sehen"
   },
   "create": {
-    "string": "Create"
+    "string": "Erstellen"
   },
   "done": {
     "string": "Fertig"
