--- a/public/lang/ja.json
+++ b/public/lang/ja.json
@@ -2780,7 +2780,7 @@
     "string": "新規プレイリスト"
   },
   "not_shareable": {
-    "string": "This Playlist is Private."
+    "string": "このプレイリストは非公開です。"
   },
   "not_shareable_title": {
     "string": "プライベート"
@@ -2798,7 +2798,7 @@
     "string": "あなただけが閲覧できます"
   },
   "create": {
-    "string": "Create"
+    "string": "作成する"
   },
   "done": {
     "string": "終了"
