--- a/public/lang/ru.json
+++ b/public/lang/ru.json
@@ -2780,7 +2780,7 @@
     "string": "Новый плейлист"
   },
   "not_shareable": {
-    "string": "This Playlist is Private."
+    "string": "Этот плейлист является частным."
   },
   "not_shareable_title": {
     "string": "Частный"
@@ -2798,7 +2798,7 @@
     "string": "Только вы можете просматривать"
   },
   "create": {
-    "string": "Create"
+    "string": "Создавать"
   },
   "done": {
     "string": "Выполнено"
