--- a/public/lang/zh.json
+++ b/public/lang/zh.json
@@ -2780,7 +2780,7 @@
     "string": "新播放列表"
   },
   "not_shareable": {
-    "string": "This Playlist is Private."
+    "string": "該播放清單是私人的。"
   },
   "not_shareable_title": {
     "string": "私人的"
@@ -2798,7 +2798,7 @@
     "string": "只有您可以查看"
   },
   "create": {
-    "string": "Create"
+    "string": "創造"
   },
   "done": {
     "string": "已完成的"
