--- a/public/lang/br.json
+++ b/public/lang/br.json
@@ -2747,7 +2747,7 @@
   },
   "add_to_playlist_btn": {
     "comment": "Add to Playlist button label",
-    "string": "Playlist"
+    "string": "Adicionar à Playlist"
   },
   "anyoneWithLink": {
     "string": "Qualquer pessoa com o link pode visualizar"
