--- a/public/lang/fr.json
+++ b/public/lang/fr.json
@@ -2747,7 +2747,7 @@
   },
   "add_to_playlist_btn": {
     "comment": "Add to Playlist button label",
-    "string": "Playlist"
+    "string": "Ajouter à la playlist"
   },
   "anyoneWithLink": {
     "string": "Toute personne disposant du lien peut voir"
