--- a/public/lang/ru.json
+++ b/public/lang/ru.json
@@ -2747,7 +2747,7 @@
   },
   "add_to_playlist_btn": {
     "comment": "Add to Playlist button label",
-    "string": "Список воспроизведений"
+    "string": "Добавить в плейлист"
   },
   "anyoneWithLink": {
     "string": "Посмотреть может любой, у кого есть ссылка"
